--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,19 +2,13 @@ include:
  - project: "osdu/platform/ci-cd-pipelines"
    file: "standard-setup.yml"
 
-stages:
-  - review
-  - build
-  - coverage
-  - containerize
-  - scan
-
-include:
  - project: "osdu/platform/ci-cd-pipelines"
    file: "build/maven.yml"
 
  - project: "osdu/platform/ci-cd-pipelines"
    file: "cloud-providers/azure.yml"
+
+ - local: "devops/azure/override-stages.yml" 
 
 .maven:
   image: maven:3.9.3-eclipse-temurin-17
