--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
     </dependency>
     <dependency>
         <groupId>com.azure.spring</groupId>
+        <artifactId>azure-spring-boot-starter-active-directory</artifactId>
+        <version>3.4.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.azure.spring</groupId>
         <artifactId>azure-spring-boot</artifactId>
         <version>3.5.0</version>
     </dependency>
