--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-blob.account_key=${blob.account_key}
-blob.account_name=${schema_id_query_param}
-cosmos.host=${schema_id_query_param}
-cosmos.key=${schema_id_query_param}
+blob.account_key=${blob_account_key}
+blob.account_name=${blob_account_key}
+cosmos.host=${cosmos_host}
+cosmos.key=${cosmos_key}
 LOG_PREFIX=Schema-Clean-Up
-schema_id_query_param=${schema_id_query_param}
+schema.query_params.id=${schema_query_params_id}
+server.servlet.contextPath=/api/schema-cleanup-service/v1
+JAVA_OPTS=-Dserver.port=80
+server.port=8080
+azure.istio.auth.enabled=${azure_istioauth_enabled:true}
