--- a/.fossa.yml
+++ b/.fossa.yml
@@ -2,7 +2,7 @@ version: 2
 cli:
   server: https://app.fossa.com
   fetcher: custom
-  project: Schema
+  project: schema-clean-up
 analyze:
   modules:
     - name: schema-clean-up
