--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 blob.account_key=${blob_account_key}
-blob.account_name=${blob_account_key}
+blob.account_name=${blob_account_name}
 cosmos.host=${cosmos_host}
 cosmos.key=${cosmos_key}
 LOG_PREFIX=Schema-Clean-Up
