remove authentication and add error reporting class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ server.servlet.contextPath=/api/schema-cleanup-service/v1
 JAVA_OPTS=-Dserver.port=80
 server.port=8080
 azure.istio.auth.enabled=${azure_istioauth_enabled:true}
+security.ignored=/**
