--- a/devops/azure/templates/secret.yaml
+++ b/devops/azure/templates/secret.yaml
@@ -5,8 +5,9 @@ metadata:
   name: schema-cleanup-secret
   namespace: "{{ .Values.namespace }}"
 data:
-  blob_account_key: {{ $.Values.secret.blob_account_key }}
-  blob_account_name: {{ $.Values.secret.blob_account_name }}
-  cosmos_host: {{ $.Values.secret.cosmos_host }}
-  cosmos_key: {{ $.Values.secret.cosmos_key }}
-  schema_query_params_id: {{ $.Values.secret.schema_query_params_id }}
+  blob_account_key: {{ $.Values.secret.blob_account_key | b64enc }}
+  blob_account_name: {{ $.Values.secret.blob_account_name | b64enc }}
+  cosmos_host: {{ $.Values.secret.cosmos_host | b64enc }}
+  cosmos_key: {{ $.Values.secret.cosmos_key | b64enc }}
+  schema_query_params_id: {{ $.Values.secret.schema_query_params_id | b64enc }}
+  
