--- a/devops/azure/override-stages.yml
+++ b/devops/azure/override-stages.yml
@@ -84,9 +84,10 @@ azure_containerize:
 azure_deploy:
   script:
     # Install Service
-    - helm show chart $HELM_CHART_OCI --version $HELM_CHART_OCI_VERSION
+    cd devops/azure
+    echo "[WARN] No (HELM_CHART_OCI) var found, using /devops/azure to install"
     - >-
-      helm upgrade -i schema-cleanup $HELM_CHART_OCI --version $HELM_CHART_OCI_VERSION -n osdu --wait --timeout 5m
+      helm upgrade -i schema-cleanup . -n osdu --wait --timeout 5m
       -f devops/azure/values.yaml
       --set secret.blob_account_key=$AZURE_DP_BLOB_KEY
       --set secret.blob_account_name=$AZURE_DP_BLOB_ACCOUNT_NAME
