--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ clean-test-schemas:
   tags: ["osdu-medium"]
   image: curlimages/curl
   stage: clean
-  needs: ["azure_test"]
+  # needs: ["azure_test"]
   script:
   - echo "deleting test schemas.."
   - curl -v --location --request POST 'https://${AZURE_DNS_NAME}/api/schema-cleanup-service/v1/schemas'
