[MS-43012] support for system schema cleanup

--- a/devops/azure/templates/secret.yaml
+++ b/devops/azure/templates/secret.yaml
@@ -10,4 +10,10 @@ data:
   cosmos_host: {{ $.Values.secret.cosmos_host | b64enc }}
   cosmos_key: {{ $.Values.secret.cosmos_key | b64enc }}
   schema_query_params_id: {{ $.Values.secret.schema_query_params_id | b64enc }}
+  system_blob_account_key: {{ $.Values.secret.system_blob_account_key | b64enc }}
+  system_blob_account_name: {{ $.Values.secret.system_blob_account_name | b64enc }}
+  system_cosmos_host: {{ $.Values.secret.system_cosmos_host | b64enc }}
+  system_cosmos_key: {{ $.Values.secret.system_cosmos_key | b64enc }}
+  system_schema_query_params_id: {{ $.Values.secret.system_schema_query_params_id | b64enc }}
+
   
